swagger added to product handlers and fixed some small bugs
